--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,7 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+body{
+  background-image: linear-gradient(to bottom right, hsl(186, 100%, 74%), hsl(212, 100%, 68%))
+}
