--- a/app/globals.css
+++ b/app/globals.css
@@ -18,5 +18,5 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 body{
-  background-image: linear-gradient(to bottom right, hsl(186, 100%, 74%), hsl(212, 100%, 68%))
+  /* background-image: linear-gradient(to bottom right, hsl(186, 100%, 74%), hsl(212, 100%, 68%)) */
 }
