auth required for create

--- a/app/ui/styles/Button.css
+++ b/app/ui/styles/Button.css
@@ -1,6 +1,6 @@
 .button{
     position: relative;
-    background-color: black;
+    background-color: rgb(86, 84, 84);
     border-radius: 4em;
     font-size: 16px;
     color: white;
