--- a/app/ui/styles/LoginLoading.css
+++ b/app/ui/styles/LoginLoading.css
@@ -17,6 +17,7 @@
     border-bottom: 60px solid transparent;
     border-top-left-radius: 60px;
     border-top-right-radius: 60px;
+    transform:rotate(320deg);
     -moz-transform:rotate(320deg);
     -webkit-transform:rotate(320deg);
     -o-transform:rotate(320deg);
@@ -36,6 +37,7 @@
     border-bottom: 60px solid transparent;
     border-top-left-radius: 60px;
     border-top-right-radius: 60px;
+    transform:rotate(80deg);
     -moz-transform:rotate(80deg);
     -webkit-transform:rotate(80deg);
     -o-transform:rotate(80deg);
@@ -54,6 +56,7 @@
     border-bottom: 60px solid transparent;
     border-top-left-radius: 60px;
     border-top-right-radius: 60px;
+    transform:rotate(200deg);
     -moz-transform:rotate(200deg);
     -webkit-transform:rotate(200deg);
     -o-transform:rotate(200deg);
