--- a/app/recipes/[name]/edit/styles.scss
+++ b/app/recipes/[name]/edit/styles.scss
@@ -10,8 +10,8 @@
 
 .box{
     // width: 50%;
-    border: 2px solid gray;
-    background-color: whitesmoke;
+    border: 2px solid blue;
+    // background-color: black;
     padding: 25px;
     margin: 20px;
     border-radius: 0.375rem;
@@ -33,6 +33,7 @@
     @extend .box;
     max-width: 100%;
     position: relative;
+    // background-color:;
 }
 
 .ingredients-table {
