fixing some styling issues

--- a/app/ui/styles/Button.css
+++ b/app/ui/styles/Button.css
@@ -3,11 +3,10 @@
     background-color: rgb(86, 84, 84);
     border-radius: 4em;
     font-size: 16px;
-    color: white;
-    padding: 0.8em 1.8em;
+    color: white !important;
     cursor:pointer;
     user-select:none;
-    text-align: center;
+    text-align: center !important;
     text-decoration: none;
     cursor: pointer;
     transition-duration: 0.4s;
