--- a/app/recipes/create/styles.scss
+++ b/app/recipes/create/styles.scss
@@ -1,15 +1,10 @@
-/* .ingredients-form {
-    max-width: fit-content;
-} */
-
 .form-div{
-    display: flex;
+    display: inline;
     padding: 10px;
     width: auto;
 }
 
 .box{
-    // width: 50%;
     border: 2px solid gray;
     background-color: whitesmoke;
     padding: 25px;
@@ -43,4 +38,22 @@
 .dropdown-menu{
     z-index: 1000;
     background-color: white;
+	border: solid;
+	border-width: 1px;
+	padding: 2px;
 }
+
+input[type="text"]:focus{
+    // border: 1px solid blue !important;
+    border-color: #92DCE5 !important;
+}
+
+input[type="text"]{
+    border: solid 1px #EEE5E9 !important;
+    font-size: medium;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+// quantity-input:focus{
+//     border: 1px solid #92DCE5 !important;
+// }
